[tool.poetry]
name = "bootstrap-ml-project"
version = "0.1.0"
description = ""
authors = ["Quentin <quentin.herreros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "2.9.5"

[tool.poetry.dev-dependencies]
black = "22.1.0"
flake8 = "4.0.1"
pylint = "2.12.2"
pytest = "7.0.1"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
